--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Fruits</title>
-    <link rel="stylesheet" href="./client/styles/index.scss" />
+    <title>Fabric</title>
+    <link href="./client/index.css" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
